--- a/src/master.scss
+++ b/src/master.scss
@@ -1,1 +1,6 @@
+@import "partials/_variables";
 @import "partials/_normalize.scss";
+@import "partials/_mixins.scss";
+@import "partials/_common.scss";
+@import "partials/_header.scss";
+@import "partials/_cmd.scss";
