--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -4,3 +4,18 @@
   box-sizing: border-box;
   list-style: none;
 }
+
+.flex {
+  display: flex;
+}
+
+header {
+  background-color: #000;
+}
+
+div.cmd ul li i {
+  color: #009cff;
+}
+div.cmd ul li p {
+  color: #989898;
+}
