--- a/src/partials/_nav.scss
+++ b/src/partials/_nav.scss
@@ -8,6 +8,11 @@ padding: 8px 0;
   }
 }
 
+.fa-angle-down {
+  font-size: $caretfont;
+  opacity: 0.7;
+}
+
 .nav-list {
   align-items: center;
   ul {
