--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -3,10 +3,12 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  font-family: "Lato", sans-serif;
+  outline: none;
 }
 
 .container {
-  width: 80%;
+  width: 1200px;
   margin: 0 auto;
 }
 
@@ -16,10 +18,11 @@
 
 header {
   background-color: #000;
+  padding-bottom: 10px;
 }
 
 div.cmd {
-  padding: 20px 0;
+  padding: 10px 0;
   justify-content: flex-end;
 }
 div.cmd ul {
@@ -34,19 +37,20 @@ div.cmd ul li i {
 }
 div.cmd ul li span {
   color: #989898;
-}
-
-.nav {
-  padding: 8px 0;
+  font-size: 13px;
 }
 
 .logo img {
-  width: 100px;
+  width: 95px;
 }
 
 .fa-angle-down {
   font-size: 10px;
   opacity: 0.7;
+}
+
+.nav {
+  padding-top: 10px;
 }
 
 .nav-list {
@@ -55,5 +59,6 @@ div.cmd ul li span {
 .nav-list ul li {
   display: inline-block;
   color: #fff;
-  margin: 0 20px;
+  margin: 0 25px;
+  font-size: 13px;
 }
