--- a/src/partials/_cmd.scss
+++ b/src/partials/_cmd.scss
@@ -1,5 +1,5 @@
 div.cmd {
-  padding: 20px 0;
+  padding: 10px 0;
   justify-content: flex-end;
   ul {
     align-items: center;
@@ -11,6 +11,7 @@ div.cmd {
       }
       span {
         color: $cmdcolor;
+        font-size: $primaryfont;
       }
     }
   }
