--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,5 +1,8 @@
 $cmdcolor: #989898;
 $cmdicon: #009cff;
 $primarycolor: #fff;
+$navcolor: #000;
 $caretfont: 10px;
 $primaryfont: 13px;
+$subtitleweight: lighter;
+$offer: #c70eb8;
