--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -5,6 +5,7 @@
   list-style: none;
   font-family: "Lato", sans-serif;
   outline: none;
+  text-decoration: none;
 }
 
 .container {
@@ -16,9 +17,16 @@
   display: flex;
 }
 
-header {
+.padding-bottom5 {
+  padding-bottom: 5px;
+}
+
+.w50perc {
+  width: calc(100% / 2);
+}
+
+nav {
   background-color: #000;
-  padding-bottom: 10px;
 }
 
 div.cmd {
@@ -49,7 +57,7 @@ div.cmd ul li span {
   opacity: 0.7;
 }
 
-.nav {
+.nav-menu {
   padding-top: 10px;
 }
 
@@ -61,4 +69,55 @@ div.cmd ul li span {
   color: #fff;
   margin: 0 25px;
   font-size: 13px;
+}
+
+.jumbotron {
+  padding: 40px 0px;
+  background-position: center;
+  background-size: cover;
+}
+
+.jumbotron-content {
+  padding: 30px 0;
+}
+
+.jumbotron-logo {
+  padding: 10px 0;
+}
+.jumbotron-logo img {
+  width: 200px;
+}
+
+.jumbotron-text {
+  padding: 10px 0;
+}
+.jumbotron-text h3 {
+  font-weight: lighter;
+}
+
+.jumbotron-subtitle {
+  color: #c70eb8;
+  padding: 20px 0;
+}
+.jumbotron-subtitle h4 {
+  font-weight: lighter;
+}
+
+.jumbo-btn {
+  padding: 15px 0;
+}
+.jumbo-btn a {
+  font-style: normal;
+  margin-right: 10px;
+  text-transform: uppercase;
+  border: 1px solid #000;
+  padding: 8px 15px;
+  color: #000;
+  font-weight: lighter;
+}
+
+.jumbo-btn a:hover {
+  background-color: #000;
+  color: #fff;
+  font-weight: bold;
 }
