--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -6,3 +6,6 @@ $caretfont: 10px;
 $primaryfont: 13px;
 $subtitleweight: lighter;
 $offer: #c70eb8;
+$cardpadding: 20px 20px;
+$linkcolor: #009cff;
+$mainbg: #e8e8e8;
