--- a/src/master.scss
+++ b/src/master.scss
@@ -6,4 +6,5 @@
 @import "partials/_cmd.scss";
 @import "partials/_nav.scss";
 @import "partials/_jumbo.scss";
-@import "partials/_main.scss";
+@import "partials/_mainmodules.scss";
+@import "partials/_maincards.scss";
