--- a/src/master.scss
+++ b/src/master.scss
@@ -8,3 +8,6 @@
 @import "partials/_jumbo.scss";
 @import "partials/_mainmodules.scss";
 @import "partials/_maincards.scss";
+@import "partials/_main.scss";
+@import "partials/_footer.scss";
+@import "partials/_footercopyright.scss";
