--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -8,6 +8,15 @@ $subtitleweight: lighter;
 $offer: #c70eb8;
 $cardpadding: 20px 20px;
 $linkcolor: #009cff;
-$mainbg: #e8e8e8;
+$bodybg: #e8e8e8;
 $cardtext: #fff;
-$cardtitle: 500; 
+$cardtitle: 500;
+$wacom: #3c1567;
+$painter: #3c3c3c;
+$business: #0072bc;
+$facebook: #3b5998;
+$instagram: #e4405f;
+$twitter: #1da1f2;
+$youtube: #cd201f;
+$pinterest: #bd081c;
+$feed: #ff8d00;
