Pagina desktop completa

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -121,7 +121,14 @@ div.cmd ul li span {
   padding: 20px 0;
 }
 .jumbotron-subtitle h4 {
+  font-style: italic;
   font-weight: lighter;
+}
+.jumbotron-subtitle h4:first-child {
+  font-weight: bold;
+}
+.jumbotron-subtitle h4:last-child {
+  font-weight: 400;
 }
 
 .jumbo-btn {
@@ -239,20 +246,22 @@ div.cmd ul li span {
 }
 
 main {
-  padding-bottom: 50px;
   background-color: #e8e8e8;
 }
 
 footer {
-  background-color: #e8e8e8;
+  background-color: #ececec;
+  padding-top: 50px;
 }
 
 .footer-list {
   width: 100%;
+  padding-bottom: 30px;
 }
 .footer-list .footer-col ul li:first-child {
-  margin-bottom: 8px;
+  margin-bottom: 10px;
   font-weight: 400;
+  font-size: 14px;
 }
 .footer-list .footer-col ul {
   font-size: 13px;
@@ -290,4 +299,32 @@ footer {
 }
 .icons i.fa-rss {
   background-color: #ff8d00;
+}
+
+.copyright-banner {
+  background-color: #000;
+  padding: 10px 0;
+}
+
+.container {
+  justify-content: space-between;
+}
+
+.copyright-logo {
+  justify-content: space-between;
+}
+.copyright-logo img {
+  padding-right: 35px;
+}
+
+.copyright-right ul {
+  align-items: center;
+}
+.copyright-right ul li {
+  color: #989898;
+  margin-right: 15px;
+  font-size: 13px;
+}
+.copyright-right ul li:last-child {
+  color: #fff;
 }
