--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -14,6 +14,7 @@ $cardtitle: 500;
 $wacom: #3c1567;
 $painter: #3c3c3c;
 $business: #0072bc;
+$footer: #ececec;
 $facebook: #3b5998;
 $instagram: #e4405f;
 $twitter: #1da1f2;
