--- a/src/partials/_footer.scss
+++ b/src/partials/_footer.scss
@@ -1,14 +1,17 @@
 footer {
-  background-color: $bodybg;
+  background-color: $footer;
+  padding-top: 50px;
 }
 
 .footer-list {
   width: 100%;
+  padding-bottom: 30px;
   .footer-col {
     ul {
       li:first-child {
-        margin-bottom: 8px;
+        margin-bottom: 10px;
         font-weight: 400;
+        font-size: 14px;
       }
       & {
         font-size: 13px;
