--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -46,6 +46,10 @@ h1, h2, h3, h4, h5, h6, p, a, li {
   text-align: center;
 }
 
+li {
+  cursor: pointer;
+}
+
 nav {
   background-color: #000;
 }
