Esercizio Completo Responsive

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -73,8 +73,18 @@ div.cmd ul li span {
   font-size: 13px;
 }
 
+@media all and (max-width: 768px) {
+  .cmd {
+    display: none;
+  }
+}
 .logo img {
   width: 95px;
+}
+
+.hamburger i {
+  color: #fff;
+  display: none;
 }
 
 .fa-angle-down {
@@ -96,10 +106,39 @@ div.cmd ul li span {
   font-size: 13px;
 }
 
+@media all and (max-width: 1024px) {
+  .nav-menu {
+    padding: 0 20px;
+  }
+
+  .nav-list ul li {
+    margin: 0 15px;
+  }
+}
+@media all and (max-width: 768px) {
+  .nav-list {
+    display: none;
+  }
+
+  .hamburger > i {
+    display: block;
+    padding-left: 20px;
+  }
+
+  .logo {
+    margin: 0 auto;
+  }
+
+  .nav-menu {
+    align-items: center;
+    padding: 15px 0;
+  }
+}
 .jumbotron {
   padding: 40px 0px;
   background-position: center;
   background-size: cover;
+  position: relative;
 }
 
 .jumbotron-content {
@@ -154,6 +193,50 @@ div.cmd ul li span {
   font-weight: bold;
 }
 
+.overlay {
+  background-color: #000;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  display: none;
+}
+
+@media all and (max-width: 1024px) {
+  .jumbotron-content {
+    padding: 0 20px;
+  }
+}
+@media all and (max-width: 576px) {
+  .jumbotron-logo > img {
+    filter: invert(100%);
+  }
+
+  .jumbotron-content {
+    text-align: center;
+    position: relative;
+    z-index: 2;
+    padding: 0 20px;
+  }
+
+  .jumbotron-text > h3 {
+    color: #fff;
+  }
+
+  .jumbotron-subtitle > h4 {
+    color: #fff;
+  }
+
+  .jumbo-btn {
+    display: none;
+  }
+
+  .overlay {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+}
 .main-title {
   padding-top: 30px;
   padding-bottom: 15px;
@@ -346,7 +429,7 @@ footer {
   background-color: #ff8d00;
 }
 
-@media all and (max-width: 767px) {
+@media all and (max-width: 768px) {
   .icons > i {
     margin-bottom: 15px;
   }
