--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -106,6 +106,9 @@ div.cmd ul li span {
   font-size: 13px;
 }
 
+.nav-list-mobile {
+  display: none;
+}
 .nav-list-mobile ul li {
   color: #fff;
   padding: 10px 10px;
