--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -108,16 +108,17 @@ div.cmd ul li span {
 
 .nav-list-mobile {
   display: none;
+  transition: all 2s linear;
 }
 .nav-list-mobile ul li {
   color: #fff;
   padding: 10px 10px;
   border-top: 0.5px solid #eeeeee;
-  border-bottom: 0.5px solid #eeeeee;
 }
 
 ul.contacts li i {
   color: #009cff;
+  padding-right: 10px;
 }
 
 @media all and (max-width: 1024px) {
