--- a/src/partials/_nav.scss
+++ b/src/partials/_nav.scss
@@ -34,12 +34,12 @@
 
 .nav-list-mobile {
   display: none;
+  transition: all 2s linear;
   ul {
     li {
       color: #fff;
       padding: 10px 10px;
       border-top: 0.5px solid rgb(238, 238, 238);
-      border-bottom: 0.5px solid rgb(238, 238, 238);
     }
   }
 }
@@ -48,6 +48,7 @@ ul.contacts {
   li {
     i {
       color: $cmdicon;
+      padding-right: 10px;
     }
   }
 } 
