--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -108,7 +108,7 @@ div.cmd ul li span {
 
 .nav-list-mobile {
   display: none;
-  transition: all 2s linear;
+  transition: all 2s;
 }
 .nav-list-mobile ul li {
   color: #fff;
