--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -372,7 +372,7 @@ ul.contacts li i {
   width: 100%;
   height: 100%;
 }
-.cards .card-img img.overlay {
+.cards .card-img img.overlay-img {
   position: absolute;
   top: 0;
   left: 0;
