--- a/src/partials/_maincards.scss
+++ b/src/partials/_maincards.scss
@@ -42,7 +42,7 @@
       width: 100%;
       height: 100%;
     }
-    img.overlay {
+    img.overlay-img {
       position: absolute;
       top: 0;
       left: 0;
